--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,44 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Modulo de quejas y urgencias." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Urgencias y Quejas</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    
+        <nav id="navsec" class="navbar navbar-light navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Urgencias y Quejas</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:black">Urgencias y Quejas</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="btn-outline-secondary nav-link text-black-50" asp-area="" asp-controller="Home" asp-action="Index"style="color:black">Quejas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn-outline-secondary nav-link text-black-50" asp-area="" asp-controller="Home" asp-action="About"style="color:black">Urgencias</a>
                         </li>
                     </ul>
+
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="btn-outline-secondary nav-link text-black-50" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn-outline-secondary nav-link ttext-black-50" asp-area="" asp-controller="Home" asp-action="About">Nosotros</a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Equipo dinamita - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+    
+        
+            
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
+            
+         
+            <footer class="border-top footer text-muted">
+                <div class="container">
+                    &copy; 2020 - Equipo dinamita - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                </div>
+            </footer>
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="~/js/site.js" asp-append-version="true"></script>
+            @RenderSection("Scripts", required: false)
 </body>
 </html>
