Arreglado el index

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,41 +12,43 @@
         </div>
     </header>
     <br />
-    <section>
-        <div class="card-deck">
-            <div class="card" style="width:30 rem;">
-                <img class="card-img-top" src="~/images/quejas.jpg" alt="ModuloQuejas">
-                <div class="card-body">
-                    <h5 class="card-title">Quejas</h5>
-                    <p class="card-text">Lo mas importante es saber tu opinión sobre nosotros y saber como poderlo mejorar.</p>
-                    <a href="#" class="btn btn-primary">Cuentanoslo</a>
-                </div>
-            </div>
-            <div class="card" style="width:30 rem;">
-                <img class="card-img-top" src="~/images/urgencias.jpg" alt="ModuloUrgencias">
-                <div class="card-body">
-                    <h5 class="card-title">Urgencias</h5>
-                    <p class="card-text">No hagas filas para tu registro, en cuestion de minutos entra a nuestra lista de urgencias desde nuestro modulo.</p>
-                    <a href="#" class="btn btn-primary">Urgencias</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <div class="container-fluid">
+    <div>
         <section>
-            <br />
-            <div class="jumbotron">
-                <h1 class="display-4">Nuestra Misión</h1>
-                <p class="lead">Colaborar para mejorar la salud y la calidad de vida de los ciudadanos, ofertando servicios sanitarios excelentes, con el paciente como centro de nuestra atención, y profesionales altamente cualificados, en un hospital privado con vocación docente e investigadora.</p>
-                <hr class="my-4">
-                <p>Asegurar la máxima colaboración e integración con la administración pública, con atención primaria y los servicios socio-sanitarios, las compañías aseguradoras y el Grupo Quironsalud, promoviendo un beneficio mutuo y sostenible para toda la sociedad.</p>
-            </div><div class="jumbotron">
-                <h1 class="display-4">Nuestra Visión</h1>
-                <p class="lead">Liderar la Transformación del Sistema Sanitario actual para asegurar su sostenibilidad, promoviendo la innovación e incorporando las nuevas tecnologías disponibles.</p>
-                <hr class="my-4">
-                <p>Ser reconocidos como referentes a nivel nacional e internacional, desde la perspectiva asistencial, docente e investigadora.</p>
+            <div class="card-deck">
+                <div class="card" style="width:30 rem;">
+                    <img class="card-img-top" src="~/images/quejas.jpg" alt="ModuloQuejas">
+                    <div class="card-body">
+                        <h5 class="card-title">Quejas</h5>
+                        <p class="card-text">Lo mas importante es saber tu opinión sobre nosotros y saber como poderlo mejorar.</p>
+                        <a href="#" class="btn btn-primary">Cuentanoslo</a>
+                    </div>
+                </div>
+                <div class="card" style="width:30 rem;">
+                    <img class="card-img-top" src="~/images/urgencias.jpg" alt="ModuloUrgencias">
+                    <div class="card-body">
+                        <h5 class="card-title">Urgencias</h5>
+                        <p class="card-text">No hagas filas para tu registro, en cuestion de minutos entra a nuestra lista de urgencias desde nuestro modulo.</p>
+                        <a href="#" class="btn btn-primary">Urgencias</a>
+                    </div>
+                </div>
             </div>
         </section>
+        <div class="container-fluid">
+            <section>
+                <br />
+                <div class="jumbotron">
+                    <h1 class="display-4">Nuestra Misión</h1>
+                    <p class="lead">Colaborar para mejorar la salud y la calidad de vida de los ciudadanos, ofertando servicios sanitarios excelentes, con el paciente como centro de nuestra atención, y profesionales altamente cualificados, en un hospital privado con vocación docente e investigadora.</p>
+                    <hr class="my-4">
+                    <p>Asegurar la máxima colaboración e integración con la administración pública, con atención primaria y los servicios socio-sanitarios, las compañías aseguradoras y el Grupo Quironsalud, promoviendo un beneficio mutuo y sostenible para toda la sociedad.</p>
+                </div><div class="jumbotron">
+                    <h1 class="display-4">Nuestra Visión</h1>
+                    <p class="lead">Liderar la Transformación del Sistema Sanitario actual para asegurar su sostenibilidad, promoviendo la innovación e incorporando las nuevas tecnologías disponibles.</p>
+                    <hr class="my-4">
+                    <p>Ser reconocidos como referentes a nivel nacional e internacional, desde la perspectiva asistencial, docente e investigadora.</p>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 
