--- a/Views/Urgencias/Index.cshtml
+++ b/Views/Urgencias/Index.cshtml
@@ -8,95 +8,97 @@
     String fechaMax = dt.ToString("yyyy-MM-dd");
 }
 @model UrgenciaModel
-@using (Html.BeginForm("Create", "Urgencias", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.Nombre, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.Nombre,
-           new { @class = "form-control", placeholder = "Nombre.", autofocus = "autofocus" })
-            @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.FechaNac, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.FechaNac,
-           new { @class = "form-control", type = "date", min = fechaMin, max = fechaMax, placeholder = "Fecha de nacimiento." })
-            @Html.ValidationMessageFor(x => x.FechaNac, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.Email, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.Email,
-           new { @class = "form-control", type = "text", placeholder = "name@example.com." })
-            @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.IdArea, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            <select id="IdArea" name="IdArea" class="form-control" required>
-                <option value="1">Determinado</option>
-            </select>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.Telefono, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.Telefono,
-           new { @class = "form-control", type = "number", placeholder = "0123456789" })
-            @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.TelefonoF, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.TelefonoF,
-           new { @class = "form-control", type = "number", placeholder = "0123456789" })
-            @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.Nss, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextBoxFor(x => x.Nss,
-           new { @class = "form-control", type = "number", placeholder = "123456789" })
-            @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-5">
-            @Html.LabelFor(x => x.Descripcion, new { @class = "col-form-label" })
-        </div>
-        <div class="col">
-            @Html.TextAreaFor(x => x.Descripcion,
-           new { @class = "form-control", placeholder = "Descripcion-" })
-            @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="row justify-content-md-center">
-        <div class="col col-2">
-            <button class="btn btn-primary btn-lg">Enviar.</button>
-        </div>
-        <div class="col col-2">
-            <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
-        </div>
-    </div>
-}
+    <section>
+        @using (Html.BeginForm("Create", "Urgencias", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.Nombre, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.Nombre,
+                   new { @class = "form-control", placeholder = "Nombre.", autofocus = "autofocus" })
+                    @Html.ValidationMessageFor(x => x.Nombre, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.FechaNac, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.FechaNac,
+                   new { @class = "form-control", type = "date", min = fechaMin, max = fechaMax, placeholder = "Fecha de nacimiento." })
+                    @Html.ValidationMessageFor(x => x.FechaNac, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.Email, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.Email,
+                   new { @class = "form-control", type = "text", placeholder = "name@example.com." })
+                    @Html.ValidationMessageFor(x => x.Email, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.IdArea, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    <select id="IdArea" name="IdArea" class="form-control" required>
+                        <option value="1">Determinado</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.Telefono, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.Telefono,
+                   new { @class = "form-control", type = "number", placeholder = "0123456789" })
+                    @Html.ValidationMessageFor(x => x.Telefono, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.TelefonoF, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.TelefonoF,
+                   new { @class = "form-control", type = "number", placeholder = "0123456789" })
+                    @Html.ValidationMessageFor(x => x.TelefonoF, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.Nss, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextBoxFor(x => x.Nss,
+                   new { @class = "form-control", type = "number", placeholder = "123456789" })
+                    @Html.ValidationMessageFor(x => x.Nss, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    @Html.LabelFor(x => x.Descripcion, new { @class = "col-form-label" })
+                </div>
+                <div class="col">
+                    @Html.TextAreaFor(x => x.Descripcion,
+                   new { @class = "form-control", placeholder = "Descripcion-" })
+                    @Html.ValidationMessageFor(x => x.Descripcion, null, new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col col-2">
+                    <button class="btn btn-primary btn-lg">Enviar.</button>
+                </div>
+                <div class="col col-2">
+                    <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
+                </div>
+            </div>
+        }
+    </section>
