--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/2a7e8c7373.js" crossorigin="anonymous"></script>
     <meta name="Description" content="Sitio web hecho, como modulo de quejas y urgencias para funcionar en conjunto junto a otros modulos de un hospital.">
 </head>
-<body>
+<body style="margin-bottom: 0px;">
     <header>
         <nav id="navsec" class="navbar navbar-light navbar-expand-lg">
             <div class="container">
