--- a/Views/Admin/Urgencias.cshtml
+++ b/Views/Admin/Urgencias.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Views/Shared/Admin/_Layout.cshtml";
     List<UrgenciaModel> urgencias = ViewBag.urgencias;
 }
-<a asp-controller="Sesion" asp-action="IniciarS">Iniciar</a>
-<a asp-controller="Sesion" asp-action="VerSesion">Ver</a>
+<a asp-controller="Admin" asp-action="IniciarS">Iniciar</a>
+<a asp-controller="Admin" asp-action="VerSesion">Ver</a>
 <table class="table">
     <thead>
         <tr>
