Cambios en footer y vista nosotros

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -2,18 +2,21 @@
     Layout = "~/Views/Shared/More_Layout/_WithoutC.cshtml";
     ViewData["Title"] = "Nosotros";
 }
-<div>
-    <section class="headnosotros">
-        <div class="row">
-            <div class="col-md-10 col-lg-8 mx-auto">
-                <div class="textositio">
-                    <h1>Acerca de Nosotros</h1>
-                    <span class="h2"> como una opción de atención medica y servicios de salud privados, siendo desde entonces una referencia en la atención para la salud en la localidad, en las regiones Centro y Norte del estado de Mexico e incluso de Zacatecas dada la cercanía con esta entidad.</span>
+<section>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-lg-7 my-auto textonosotros">
+                <div class="mx-auto header-content">
+                    <h3 class="mb-5">Como una opción de atención medica y servicios de salud privados, siendo desde entonces una referencia en la atención para la salud en la localidad, en las regiones Centro y Norte del estado de Mexico e incluso de Zacatecas dada la cercanía con esta entidad.</h3>
                 </div>
             </div>
-        </div>
-    </section>
-</div>
+            <div class="col-lg-5 my-auto">
+                    <img class="img-fluid" alt="doctorimagen" src="../images/doctor.png" />
+            </div>
+           
+    </div>
+</section>
+
 
 
 
