--- a/Views/Shared/More_Layout/_WithoutC.cshtml
+++ b/Views/Shared/More_Layout/_WithoutC.cshtml
@@ -46,58 +46,34 @@
     </main>
     <!-- Footer -->
     <!-- Footer -->
-    <footer class="page-footer font-small mdb-color pt-4">
+    <footer class="page-footer font-small bg-secondary pt-4">
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left">
-            <hr>
-            <!-- Grid row -->
-            <div class="row d-flex align-items-center">
-
-                <!-- Grid column -->
-                <div class="col-md-7 col-lg-8">
-
-                    <!--Copyright-->
-                    <p class="text-center text-md-left">
-                        © 2020 Copyright:
-                        <a href="FroBackSolutions.com">
-                            <strong> FroBackSolutions.com</strong>
-                        </a>
-                    </p>
-
-                </div>
-                <!-- Grid column -->
-                <!-- Grid column -->
-                <div class="col-md-5 col-lg-4 ml-lg-0">
-
-                    <!-- Social buttons -->
-                    <div class="text-center text-md-right">
-                        <ul class="list-unstyled list-inline">
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm fa-2x" target="_blank" href="https://www.facebook.com/?hl=es-la">
-                                    <i class="fab fa-facebook-f">/Mod5</i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-ig fa-2x" target="_blank" href="https://www.instagram.com/?hl=es-la">
-                                    <i class="fab fa-instagram">/Mod5</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-                <!-- Grid column -->
-
-            </div>
-            <!-- Grid row -->
-
+ 
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+                <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" rel="noreferrer" >
+                    <i class="fab fa-facebook-square"> </i>
+                </a>
+            </li>
+           
+            <li class="list-inline-item">
+                <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" rel="noreferrer">
+                    <i class="fab fa-instagram-square"> </i>
+                </a>
+            </li>
+        </ul>
+        <!-- Social buttons -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center text-white py-3">
+            © 2020 Copyright:
+            <a class="text-white" target="_blank" href="https://FrobackSolutions.com/" rel="noreferrer"> Frobacksolutions.com</a>
         </div>
-        <!-- Footer Links -->
-
+        <!-- Copyright -->
+            </div>
     </footer>
-    <!-- Footer -->
-    <!-- Footer -->
     <!-- Footer -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
