--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,49 +41,41 @@
             </div>
         </nav>
     </header>
-    <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Equipo dinamita - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
 
-    <footer class="page-footer font-small mdb-color pt-4">
+    <!-- Footer -->
+    <footer class="page-footer font-small bg-secondary pt-4">
+
+        <!-- Footer Links -->
         <div class="container text-center text-md-left">
-            <div class="row d-flex align-items-center">
-                <div class="col-md-7 col-lg-8">
-                    <p class="text-center text-md-left">
-                        © 2020 Copyright:
-                        <a href="FroBackSolutions.com">
-                            <strong> FroBackSolutions.com</strong>
-                        </a>
-                    </p>
-                </div>
-                <div class="col-md-5 col-lg-4 ml-lg-0">
-                    <div class="text-center text-md-right">
-                        <ul class="list-unstyled list-inline">
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-sm fa-2x" target="_blank" href="https://www.facebook.com/?hl=es-la">
-                                    <i class="fab fa-facebook-f">/Mod5</i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a class="btn-floating btn-ig fa-2x" target="_blank" href="https://www.instagram.com/?hl=es-la">
-                                    <i class="fab fa-instagram">/Mod5</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
+            <!-- Social buttons -->
+            <ul class="list-unstyled list-inline text-center">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" rel="noreferrer">
+                        <i class="fab fa-facebook-square"> </i>
+                    </a>
+                </li>
+
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" rel="noreferrer">
+                        <i class="fab fa-instagram-square"> </i>
+                    </a>
+                </li>
+            </ul>
+            <!-- Social buttons -->
+            <!-- Copyright -->
+            <div class="footer-copyright text-center text-white py-3">
+                © 2020 Copyright:
+                <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
             </div>
+            <!-- Copyright -->
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
