--- a/Views/Admin/Login.cshtml
+++ b/Views/Admin/Login.cshtml
@@ -7,39 +7,62 @@
 }
 @model UsuarioModel
 <section>
-    @using (Html.BeginForm("IniciarS", "Admin", FormMethod.Post))
-    {
-        @if (errores != null)
-        {
-            <div class="alert alert-danger" role="alert">
-                @errores
-            </div>
-        }
-        @Html.AntiForgeryToken()
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Correo, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Correo,
-               new { @class = "form-control", placeholder = "email@example.com", autofocus = "autofocus" })
-                @Html.ValidationMessageFor(x => x.Correo, null, new { @class = "text-danger" })
+    <div class="containerlogin">
+        <div class="row justify-content-center">
+            <div class="col-md-9 col-lg-12 col-xl-10">
+                <div class="card shadow-lg o-hidden border-0 my-5">
+                    <div class="card-body p-0">
+                        <div class="row">
+                            <div class="col-lg-6 d-none d-lg-flex">
+                                <div class="flex-grow-1 bg-login-image" id="imagenlogin"></div>
+                            </div>
+                            <div class="col-lg-6 text-center">
+                                <div class="p-5">
+                                    <div class="text-center">
+                                        <h4 class="text-dark mb-4">Bienvenido</h4>
+                                    </div>
+                                    @using (Html.BeginForm("IniciarS", "Admin", FormMethod.Post))
+                                    {
+                                        @if (errores != null)
+                                        {
+                                            <div class="alert alert-danger" role="alert">
+                                                @errores
+                                            </div>
+                                        }
+                                        @Html.AntiForgeryToken()
+                                        <div class="form-group row">
+                                            @Html.LabelFor(x => x.Correo, new { @class = "col-sm-4 col-form-label" })
+                                            <div class="col">
+                                                @Html.TextBoxFor(x => x.Correo,
+                                               new { @class = "form-control", placeholder = "email@example.com", autofocus = "autofocus" })
+                                                @Html.ValidationMessageFor(x => x.Correo, null, new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            @Html.LabelFor(x => x.Password, new { @class = "col-sm-4 col-form-label" })
+                                            <div class="col">
+                                                @Html.TextBoxFor(x => x.Password,
+                                               new { @class = "form-control", type = "password", placeholder = "Password" })
+                                                @Html.ValidationMessageFor(x => x.Password, null, new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                                                <label class="form-check-label" for="dropdownCheck2">
+                                                    Recuerdame
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Iniciar sesion</button>
+                                    }
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="form-group row">
-            @Html.LabelFor(x => x.Password, new { @class = "col-sm-4 col-form-label" })
-            <div class="col">
-                @Html.TextBoxFor(x => x.Password,
-               new { @class = "form-control", type = "password", placeholder = "Password" })
-                @Html.ValidationMessageFor(x => x.Password, null, new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="dropdownCheck2">
-                <label class="form-check-label" for="dropdownCheck2">
-                    Recuerdame
-                </label>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Iniciar sesion</button>
-    }
+    </div>
 </section>
