--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -79,8 +79,8 @@ html {
     font: forte;
 }
 .textonosotros {
-    text-align: center;
-    padding: 200px 0 150px;
+    text-align:justify;
+    padding: 250px 0 150px;
     color: black;
 }
 body {
@@ -99,6 +99,30 @@ body {
     background-color:white;
     border-bottom: 1px solid rgba(33,37,41,.1);
     transition: all .2s;
+    width:100%;
+    height:auto;
+}
+.containerlogin {
+    width: 100%;
+    padding-right: .75rem;
+    padding-left: .75rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #e3e6f0;
+    border-radius: .35rem;
+}
+#imagenlogin {
+    background-image: url('../images/medicologin.jpg');
+    background-size: cover;
 }
 
 
