Footer urgencias y Vista login administrador modificada

--- a/Views/Shared/More_Layout/_WithoutC.cshtml
+++ b/Views/Shared/More_Layout/_WithoutC.cshtml
@@ -54,13 +54,13 @@
         <!-- Social buttons -->
         <ul class="list-unstyled list-inline text-center">
             <li class="list-inline-item">
-                <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" rel="noreferrer" >
+                <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" aria-label="Facebook" rel="noreferrer" >
                     <i class="fab fa-facebook-square"> </i>
                 </a>
             </li>
            
             <li class="list-inline-item">
-                <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" rel="noreferrer">
+                <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" aria-label="Instagram" rel="noreferrer">
                     <i class="fab fa-instagram-square"> </i>
                 </a>
             </li>
