--- a/Views/Shared/Admin/_Layout.cshtml
+++ b/Views/Shared/Admin/_Layout.cshtml
@@ -27,32 +27,32 @@
             @RenderBody()
         </main>
  
-    <footer class="page-footer font-small mdb-color pt-4">
-        <div class="container text-center text-md-left">
+        <footer class="page-footer font-small bg-secondary pt-4">
+            <div class="container text-center text-md-left">
 
-            <!-- Social buttons -->
-            <ul class="list-unstyled list-inline text-center">
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" rel="noreferrer">
-                        <i class="fab fa-facebook-square"> </i>
-                    </a>
-                </li>
+                <!-- Social buttons -->
+                <ul class="list-unstyled list-inline text-center">
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-fb fa-3x text-white" target="_blank" href="https://www.Facebook.com" aria-label="Facebook" rel="noreferrer">
+                            <i class="fab fa-facebook-square"> </i>
+                        </a>
+                    </li>
 
-                <li class="list-inline-item">
-                    <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" rel="noreferrer">
-                        <i class="fab fa-instagram-square"> </i>
-                    </a>
-                </li>
-            </ul>
+                    <li class="list-inline-item">
+                        <a class="btn-floating btn-ig fa-3x text-white" target="_blank" href="https://www.Instagram.com" aria-label="Instagram" rel="noreferrer">
+                            <i class="fab fa-instagram-square"> </i>
+                        </a>
+                    </li>
+                </ul>
 
-            <!-- Social buttons -->
-            <!-- Copyright -->
-            <div class="footer-copyright text-center text-white py-3">
-                © 2020 Copyright:
-                <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
+                <!-- Social buttons -->
+                <!-- Copyright -->
+                <div class="footer-copyright text-center text-white py-3">
+                    © 2020 Copyright:
+                    <a class="text-white" target="_blank" rel="noreferrer" href="https://FrobackSolutions.com/"> Frobacksolutions.com</a>
+                </div>
+                <!-- Copyright -->
             </div>
-            <!-- Copyright -->
-        </div>
         </footer>
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
